--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- PWA Meta Tags -->
     <meta name="description" content="Application de suivi calorique et rééquilibrage alimentaire">
     <meta name="theme-color" content="#52D1B3">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="Khrysalide">
@@ -43,7 +44,7 @@
         <h1 class="app-title">Khrysalide</h1>
         
         <!-- Version -->
-        <div class="version">v1.0.1</div>
+        <div class="version">v1.0.2</div>
         
         <!-- Section de chargement -->
         <div class="loading-section">
