--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h1 class="app-title">Khrysalide</h1>
         
         <!-- Version -->
-        <div class="version">v1.4.2f</div>
+        <div class="version">v1.4.3</div>
         
         <!-- Section de chargement -->
         <div class="loading-section">
